--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Definition of Done is a review checklist for a team, where the team can add a task to be reviewed, mark tasks as done, and also delete task if required.",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/vishalnagda1/definition-of-done/issues"
   },
-  "homepage": "https://github.com/vishalnagda1/definition-of-done#readme"
+  "homepage": "https://github.com/vishalnagda1/definition-of-done#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.3"
+  }
 }
