--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "devDependencies": {
     "dotenv": "^8.2.0",
     "nodemon": "^2.0.3"
+  },
+  "dependencies": {
+    "mongoose": "^5.9.7"
   }
 }
