--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemon": "^2.0.3"
   },
   "dependencies": {
-    "mongoose": "^5.9.7"
+    "mongoose": "^5.9.7",
+    "winston": "^3.2.1"
   }
 }
